syntax = "proto3";

package auth;

service AuthService {
  rpc StoreUserCredential(StoreUserCredentialRequest) returns (StoreUserCredentialResponse);
  rpc UpdateUserCredential(UpdateUserCredentialRequest) returns (UpdateUserCredentialResponse);
  rpc DeleteUserCredential(DeleteUserCredentialRequest) returns (DeleteUserCredentialResponse);
}

message StoreUserCredentialRequest {
  string user_id = 1;
  string email = 2;
  string passwordHash = 3;
}

message UpdateUserCredentialRequest {
  string user_id = 1;
  optional string email = 2;
  optional string passwordHash = 3;
}

message DeleteUserCredentialRequest {
  string user_id = 1;
}

message StoreUserCredentialResponse {
  bool success = 1;
}

message UpdateUserCredentialResponse {
  bool success = 1;
}

message DeleteUserCredentialResponse {
  bool success = 1;
}